--- a/Resources/config/processors.yml
+++ b/Resources/config/processors.yml
@@ -7,6 +7,7 @@ services:
     arguments:
       - '%catalog_storage_dir%'
       - '@pim_catalog.updater.property_setter'
+      - '@pim_catalog.repository.attribute'
       - '%aws_access_key_id%' # TODO Find a way to not pass this has a parameter
       - '%aws_secret_access_key%' # TODO Find a way to not pass this has a parameter
       - '%aws_rekognition_minimum_confidence%'
