--- a/Resources/config/processors.yml
+++ b/Resources/config/processors.yml
@@ -5,7 +5,7 @@ services:
   clickandmortar.connector.processor.mass_edit.product.add_rekognition_data:
     class: '%clickandmortar.connector.processor.mass_edit.product.add_rekognition_data.class%'
     arguments:
-      - '%catalog_storage_dir%'
+      - '%kernel.project_dir%/var/file_storage/catalog'
       - '@pim_catalog.updater.property_setter'
       - '@pim_catalog.repository.attribute'
       - '%aws_access_key_id%' # TODO Find a way to not pass this has a parameter
